# CookBook

./: .gitignore  README.md
C/infinate_function_args/: a.out
C/tictactoe/: a.out  main  main.c  player_input.c
Languages/C/switch_state/: main  main.c
Languages/Python/: DEBUGING.md
Languages/rule110/: rule110.lisp  rule110.py
Languages/tictactoe/: README.md  next.py  test.py
PureC/tictactoe/: a.out  main.c  player_input.c
Python/: DEBUGING.md  README.md
Python/BlackJack/: main.py
Python/CLArgs/: main.py
Python/Closers/: main.py
Python/FileIO/: README.md  main.py  text.txt
Python/HelloWorld/: README.md
Python/TicTacToe/: __main__.py  other.py
Python/asyncio_test/: main.py
Python/sorting/: main.py
Rust/: Cargo.toml  test_tictactoe.py  text.txt
Rust/CLArgs/: Cargo.toml  README.md
Rust/HelloWorld/: Cargo.toml  README.md
Rust/async_testing/: Cargo.toml
Rust/enums/: Cargo.toml
Rust/examples/: command_line_args.rs  enums.rs  generics.rs  open_files.rs  tictactoe.rs  traits_are_awesome.rs
Rust/generics/: Cargo.toml
Rust/matrix_rain/: Cargo.toml
Rust/multi_files_in_project/: Cargo.toml
Rust/opengl_graphics/: Cargo.toml  README.md
Rust/tictactoe/: Cargo.toml  test.py
Terminal/: COMMANDS.md  README.md
Vim/: Commands.md  READ.md  SHORT_CUTS.md
Web/FlaskStarter/: README.md
Web/MakeButton/: index.html  index.js
tictactoe/: README.md  test
tictactoe/C/: Makefile
tictactoe/Cpp/: tictactoe.out
tictactoe/Go/: main.go
tictactoe/Haskell/: Main.hs  build
tictactoe/Java/: Main.java  build
tictactoe/Python/: __main__.py
(+50 files in other folders)
