[package]
name = "opengl_graphics"
version = "0.1.0"
authors = ["cowboy8625 <cowboy8625@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1"
ogl33 = { version = "0.1", features = ["debug_error_checks", "debug_trace_messages"]}
beryllium = "0.2.0-alpha.2"
imagine = "0.0.2"
ultraviolet = "0.3"
